[BUGFIX] inputfield position higher so it doesn't get behind ios keyboard

--- a/src/components/MovieSearch/MovieSearch.scss
+++ b/src/components/MovieSearch/MovieSearch.scss
@@ -7,15 +7,15 @@
 .home__title {
   color:white;
   font-weight:200;
-  font-size:5rem;
+  font-size:4rem;
   margin:0;
   text-align: center;
-  padding-bottom:30%;
+  padding:10% 0;
   transition: .3s ease-in-out;
 }
 
 h1.search-active {
-  padding-bottom:0;
+  padding:0;
   font-size: 1.5rem;
   font-weight: 500;
   cursor: pointer;
